@@ -1,12 +1,11 @@
 ﻿using System.Reflection;
-using System.Runtime.CompilerServices;
 using System.Runtime.InteropServices;
 
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
 [assembly: AssemblyTitle("TinyNvidiaUpdateChecker")]
-[assembly: AssemblyDescription("Check for NVIDIA desktop GPU drivers, GeForce Experience replacer")]
+[assembly: AssemblyDescription("Check for NVIDIA GPU drivers, GeForce Experience replacer")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Hawaii_Beach")]
 [assembly: AssemblyProduct("TinyNvidiaUpdateChecker")]
@@ -32,5 +31,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("1.1.0.0")]
-[assembly: AssemblyFileVersion("1.1.0.0")]
+[assembly: AssemblyVersion("1.2.0.0")]
+[assembly: AssemblyFileVersion("1.2.0.0")]
